Add CI flag to false for avoid esLint errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
         run: |
           yarn install
           pip install awscli --upgrade --user
+        env: 
+          CI: false # Set to True if no eslint errors
       
       - name: Build Release App
         if: ( github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main' )
