--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "zustand": "^4.4.2"
   },
   "eslintConfig": {
     "extends": [
