--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.4",
     "viem": "^1.14.0",
     "wagmi": "^1.4.2"
   },
